--- a/ClotheOurKids.Web/Views/OurWork/OurWork.cshtml
+++ b/ClotheOurKids.Web/Views/OurWork/OurWork.cshtml
@@ -13,20 +13,20 @@
 }
 
 <div class="container-fluid bg-blue">
-    <section class="section page-top-section pt-4 pb-4 wow fadeIn" data-wow-delay="0.2s">
+    <section class="section page-top-section pt-5 pb-4 wow fadeIn" data-wow-delay="0.2s">
         <div class="row">
             <div class="col-12 mt-3">
                 <h1 class="section-heading white-text mb-2">Our Work</h1>
             </div>
             <div class="col-12 flex-center">
                 <span class="mt-1">Share</span>
-                <!--Facebook-->
-                <a id="FBShare" type="button" class="ml-2 btn-floating btn-sm btn-fb"><i class="fa fa-facebook"></i></a>
-
-                <!--Twitter-->
-                <a href="https://twitter.com/intent/tweet?url=https%3A%2F%2Fgivekidsclothes.com%2FOur-Work&hashtags=givekidsclothes&text=Learn%20what%20we%20do."
-                   type="button" class="ml-1 btn-floating btn-sm btn-tw">
-                    <i class="fa fa-twitter"></i>
+                <a class="fa-layers fa-fw fa-2x">
+                    <i class="fas fa-circle" style="color: #3b5998;"></i>
+                    <i class="fab fa-facebook-f" data-fa-transform="shrink-7" style="color: #fff;"></i>
+                </a>
+                <a class="fa-layers fa-fw fa-2x" href="https://twitter.com/intent/tweet?url=https%3A%2F%2Fgivekidsclothes.com%2FOur-Work&hashtags=givekidsclothes&text=Learn%20what%20we%20do.">
+                    <i class="fas fa-circle" style="color: #55acee;"></i>
+                    <i class="fab fa-twitter" data-fa-transform="shrink-7" style="color: #fff;"></i>
                 </a>
             </div>
         </div>
@@ -38,30 +38,30 @@
 
 <div class="container">
     <!--Section: Our Process-->
-    <section class="section mt-4">
+    <section class="section mt-4 pb-5">
         <!--Section heading-->
         <h1 class="section-heading wow fadeIn" data-wow-delay="0.2s">Our Process</h1>
         <!--Section description-->
         <p class="section-description lead wow fadeIn" data-wow-delay="0.2s">We have a simple process to get clothing and hygiene items into the hands of kids who need them</p>
 
         <div class="row mb-1 text-center">
-            <div class="col bg-orange white-text mr-2 ml-2 ml-sm-0">
+            <div class="col rounded bg-orange white-text mr-2 ml-2 ml-sm-0">
                 <h4 class="white-text mt-5">Collect</h4>
                 <p class="white-text mb-5">We rely 100% on your clothing and financial donations to ensure we can provide for all of the kids who need our help.</p>
             </div>
-            <div class="col bg-purple mr-2 mr-sm-0">
+            <div class="col rounded bg-purple mr-2 mr-sm-0">
                 <h4 class="white-text mt-5">Sort</h4>
                 <p class="white-text mb-5">
                     We inspect all of the apparel that we collect for stains, holes, or excessive wear and keep only the items that a child can wear with confidence.
                 </p>
             </div>
         </div>
-        <div class="row text-center">
-            <div class="col bg-green mr-2 ml-2 ml-sm-0">
+        <div class="row rounded text-center">
+            <div class="col rounded bg-green mr-2 ml-2 ml-sm-0">
                 <h4 class="white-text mt-5">Pack</h4>
                 <p class="white-text mb-5">At the request of a school official or child advocate pack a bag of hand-picked clothing and necessary hygiene items.</p>
             </div>
-            <div class="col bg-yellow mr-2 mr-sm-0">
+            <div class="col rounded bg-yellow mr-2 mr-sm-0">
                 <h4 class="white-text mt-5">Deliver</h4>
                 <p class="white-text mb-5">We deliver each bag to the school or organization to be given to the child in need.</p>
             </div>
