--- a/ClotheOurKids.Web/Views/Shared/_Layout.cshtml
+++ b/ClotheOurKids.Web/Views/Shared/_Layout.cshtml
@@ -23,7 +23,12 @@
     <link href='https://fonts.googleapis.com/css?family=Bad+Script' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Love+Ya+Like+A+Sister" rel="stylesheet"> 
     
-    <link href="~/Content/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+    <!-- Font awesome goes here 
+        <link href="~/Content/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+    -->
+
+    <script defer src="~/Content/plugins/font-awesome/fontawesome-all.min.js"></script>
+
     @Styles.Render("~/Content/css/bundles")
     @Styles.Render("~/Content/plugins/mMenu/dist/bundles")
 
@@ -57,13 +62,12 @@
         <header>
             <!-- Navbar -->
             <nav class="navbar fixed-top navbar-toggleable-md navbar-expand-lg scrolling-navbar double-nav bg-blue">
-                <!-- Breadcrumb-->
-                <div class="breadcrumb-dn">
-                    <p>Clothe Our Kids</p>
-                </div>
-                <ul class="nav navbar-nav nav-flex-icons d-none d-lg-flex ml-3 mr-auto" id="mainSiteMenu">
+                <a class="navbar-logo-container" href="@Url.RouteUrl("Home")">
+                    <img class="navbar-logo" src="~/Content/img/logo/MainLogo_color_scaled_noTagLine.png" alt="" />
+                </a>
+                <ul class="nav navbar-nav nav-flex-icons d-none d-lg-flex mr-auto" id="mainSiteMenu" style="margin-left: 140px;">
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle text-logo" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             About Us
                         </a>
                         <div class="dropdown-menu dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -74,7 +78,7 @@
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link waves-effect waves-light" href="@Url.RouteUrl("OurWork")"><span class="clearfix d-none d-sm-inline-block">Our Work</span></a>
+                        <a class="nav-link waves-effect waves-light text-logo" href="@Url.RouteUrl("OurWork")"><span class="clearfix d-none d-sm-inline-block">Our Work</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link waves-effect waves-light" href="@Url.RouteUrl("Stories")"><span class="clearfix d-none d-sm-inline-block">Stories</span></a>
@@ -82,12 +86,15 @@
                     <li class="nav-item">
                         @if (Request.IsAuthenticated)
                         {
-                            <a class="nav-link waves-effect waves-light" href="@Url.Action("RequestClothesForm", "RequestClothes")"><span class="clearfix d-none d-sm-inline-block">Request Clothes</span></a>
+                            <a class="nav-link waves-effect waves-light text-logo" href="@Url.Action("RequestClothesForm", "RequestClothes")"><span class="clearfix d-none d-sm-inline-block">Request Clothes</span></a>
                         }
                         else
                         {
-                            <a class="nav-link waves-effect waves-light" href="@Url.RouteUrl("RequestClothes")"><span class="clearfix d-none d-sm-inline-block">Request Clothes</span></a>
+                            <a class="nav-link waves-effect waves-light text-logo" href="@Url.RouteUrl("RequestClothes")"><span class="clearfix d-none d-sm-inline-block">Request Clothes</span></a>
                         }
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link waves-effect waves-light text-logo" href="@Url.RouteUrl("GetInvolved")"><span class="clearfix d-none d-sm-inline-block">Get Involved</span></a>
                     </li>
 
     
@@ -105,40 +112,44 @@
 
                 <!-- SideNav slide-out button -->
                 @*<div class="float-right d-lg-none">*@
-                <div class=" d-flex flex-row flex-nowrap justify-content-end align-middle align-items-center">
-                    <button class="btn btn-sm btn-outline-amber" type="button">Get Involved</button>
-                    <button class="btn btn-sm bg-red" type="button">Donate</button>
-                    
-                    <ul class="navbar-nav ml-auto nav-flex-icons">  
-                        <li class="nav-item dropdown d-lg-flex d-none" style="padding-top:15px; padding-bottom: 15px;">
-                            <a class="nav-link dropdown-toggle waves-effect waves-light" id="accountMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user"></i></a>
-                            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="accountMenu">
-                                @if (Request.IsAuthenticated)
-                                {
+                <div class="navbar-right d-flex flex-row flex-nowrap justify-content-end align-middle align-items-center">
+                    <button class="btn bg-red rounded-top rounded-bottom" type="button">Donate</button>
+                    <ul class="navbar-nav ml-auto nav-flex-icons mr-2">  
+                        @if (Request.IsAuthenticated)
+                        {
+                            <li class="nav-item dropdown d-lg-flex d-none" style="padding-top:15px; padding-bottom: 15px;">
+                                <a class="nav-link dropdown-toggle waves-effect waves-light" id="accountMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-2x fa-user"></i></a>
+                                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="accountMenu">
                                     <a class="dropdown-item waves-effect waves-light" href="@Url.RouteUrl("ManageAccount")">My Account</a>
-                                }
-                                else
-                                {
-                                    <a class="dropdown-item waves-effect waves-light" data-toggle="modal" data-target="#modal-login">Login</a>
-                                }
-                            </div> 
-                        </li>            
+                                    <a class="dropdown-item waves-effect waves-light" data-toggle="modal" data-target="#modal-login">Log In</a>
+                                </div> 
+                            </li>
+                        }
+                        else
+                        {
+                            
+                            <li class="nav-item d-lg-flex d-none">
+                                <a class="nav-link text-center waves-effect waves-light" data-toggle="modal" data-target="#modal-login"><i class="fas fa-2x fa-user"></i> <br />Log In</a>
+                            </li>
+                        }
+                        
                     </ul>
+                    <div class="bg-logo d-flex" style="height: 100%;">
+                        <button id="mMenuToggle" class="hamburger hamburger--collapse align-middle d-lg-none" type="button" style="margin-top: 8px;">
+                            <span class="hamburger-box">
+                                <span class="hamburger-inner"></span>
+                            </span>
+                        </button>
+
+                    </div>
                     
-                    <button id="mMenuToggle" class="hamburger hamburger--collapse align-self-end d-lg-none" type="button">
-                        <span class="hamburger-box">
-                            <span class="hamburger-inner"></span>
-                        </span>
-                    </button>
                     @*<a href="#" data-activates="slide-out" class="button-collapse"><i class="fa fa-bars"></i></a>*@
                 </div>
+                
             </nav>
             <!-- /.Navbar -->
             <nav id="mobileMenu" class="d-lg-none mmenu-top bg-logo">
                 <ul>
-                    <li>
-                        <a href="@Url.RouteUrl("Home")">Home</a>
-                    </li>
                     <li>
                         <span>About Us</span>
                         <ul>
@@ -160,10 +171,15 @@
                             <a class="nav-link waves-effect waves-light" href="@Url.RouteUrl("RequestClothes")">Request Clothes</a>
                         }
                     </li>
+                    <li><a href="@Url.RouteUrl("GetInvolved")">Get Involved</a></li>
                     <li>
                         @if (Request.IsAuthenticated)
                         {
                             <a href="@Url.RouteUrl("ManageAccount")">Account</a>
+                        }
+                        else
+                        {
+                            <a data-toggle="modal" data-target="#modal-login">Log In</a>
                         }
                     </li>
                 </ul>
@@ -248,8 +264,8 @@
                 <div class="row mb-3">
                     <div class="col-md-12">
                         <ul class="list-unstyled d-flex justify-content-center mb-0 py-4 list-inline">
-                            <li class="list-inline-item"><a href="https://www.facebook.com/clotheourkidsofnorthalabama" class="p-2 m-2 fa-lg fb-ic"><i class="fa fa-facebook white-text fa-lg"></i></a></li>
-                            <li class="list-inline-item"><a href="https://www.instagram.com/clotheourkids/" class="p-2 m-2 fa-lg tw-ic"><i class="fa fa-twitter white-text fa-lg"></i></a></li>
+                            <li class="list-inline-item"><a href="https://www.facebook.com/clotheourkidsofnorthalabama" class="p-2 m-2 fa-lg fb-ic"><i class="fab fa-facebook white-text fa-lg"></i></a></li>
+                            <li class="list-inline-item"><a href="https://www.instagram.com/clotheourkids/" class="p-2 m-2 fa-lg tw-ic"><i class="fab fa-twitter white-text fa-lg"></i></a></li>
                         </ul>
                     </div>
                 </div>
